--- a/AnimatedStuff/styles.css
+++ b/AnimatedStuff/styles.css
@@ -3,3 +3,34 @@ body{
 	padding: 0;
 	margin: 0;
 }
+
+.modalBox{
+	background: rgba(0,0,0,0.8);
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: 1000;
+}
+
+.modal{
+	position:absolute;
+	z-index: 1100;
+	top: 0;
+	left: 0;
+	border-radius: 8px;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+
+.modal.theme-a{
+	background-color: #fff;
+}
+.modal.theme-a .header{
+	background-color: #79A0C7;
+	color: #fff;
+	height: 32px;
+	text-align: center;
+	line-height: 32px;
+	font-size: 20px;
+	font-family: arial;
+}
