--- a/AnimatedStuff/styles.css
+++ b/AnimatedStuff/styles.css
@@ -38,5 +38,24 @@ body{
 .selectable{
 	background-color: #f5f5f5;
 	height: 40px;
-	width: 200px;
+	width: 160px;
+	position: relative;
+	padding-left: 40px;
+}
+.selectable .icon{
+	width: 40px;
+	height: 40px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.selectable .unchecked{
+	display: block;
+	background-image: url(resources/uncheck.png);
+}
+.selectable .checked{
+	display: none;
+	background-image: url(resources/check.png);
 }
